fix(modal): Visibility fixed #9

--- a/src/app/shared/modal/modal.component.sass
+++ b/src/app/shared/modal/modal.component.sass
@@ -4,7 +4,6 @@ $modal-overlay: #1F2D30E0 // #1F2D30 opacity 88%
 
 .modal
   background-color: $modal-overlay
-  display: none // Hidden by default
   left: 0
   height: 100% // Full height
   overflow: auto // Enable scroll if needed
